# gf

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  go.mod  main.go
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-VALIDATION.md
.planning/phases/02-forge-detection/: 02-01-PLAN.md  02-03-PLAN.md  02-CONTEXT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-command-routing/: 03-01-PLAN.md  03-02-PLAN.md  03-03-PLAN.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-browse/: 04-02-PLAN.md  04-02-SUMMARY.md  04-VERIFICATION.md
.planning/phases/06-browse-enhancements/: 06-01-PLAN.md  06-02-PLAN.md  06-VERIFICATION.md
.planning/phases/07-flag-normalization-audit/: 07-01-SUMMARY.md
.planning/phases/08-pr-workflow-commands/: 08-04-PLAN.md  08-04-SUMMARY.md  08-VERIFICATION.md
.planning/phases/09-issues-clone-and-self-hosted-detection/: 09-00-PLAN.md  09-01-PLAN.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-VALIDATION.md
.planning/phases/10-cleanup-dead-code-and-test-gaps/: 10-VALIDATION.md
.planning/phases/11-pr-checks/: 11-01-PLAN.md  11-01-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/phases/12-issue-pr-comments/: 12-01-PLAN.md  12-01-SUMMARY.md  12-CONTEXT.md  12-RESEARCH.md  12-VALIDATION.md  12-VERIFICATION.md
.planning/phases/13-pr-issue-edit/: 13-01-PLAN.md  13-01-SUMMARY.md  13-CONTEXT.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmd/: browse.go  browse_test.go  complete.go  complete_test.go  dispatch.go  forge.go  root.go  verbs.go  verbs_test.go
internal/config/: config.go  config_test.go
internal/forge/: detect.go  detect_test.go
internal/translate/: translate.go  translate_test.go
src/: error.rs  lib.rs  main.rs  runner.rs
src/adapter/: issue.rs  mod.rs  pr.rs  repo_auth.rs
src/browse/: mod.rs
src/cmd/: mod.rs
src/forge/: mod.rs
tests/: flag_audit.rs  integration_test.rs
tests/helpers/: exit_with.rs
(+75 files in other folders)
