[package]
name = "gf"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gf"
path = "src/main.rs"

[dependencies]
which = "8.0.2"
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
webbrowser = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[target.'cfg(windows)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[lib]
name = "gf"
path = "src/lib.rs"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
temp-env = "0.3"

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
